2013-04-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-start-process): Handle url-handler directories.

2013-04-15  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-beginning-of-defun)
	(ruby-end-of-defun, ruby-move-to-block): Bind `case-fold-search'
	to nil.
	(ruby-end-of-defun): Remove the unused arg, change the docstring
	to reflect that this function is only used as the value of
	`end-of-defun-function'.
	(ruby-beginning-of-defun): Remove "top-level" from the docstring,
	to reflect an earlier change that beginning/end-of-defun functions
	jump between methods in a class definition, as well as top-level
	functions.

2013-04-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-complete): Don't just scroll
	a *Completions* that's been iconified.
	(minibuffer-force-complete): Make sure repetitions do cycle when going
	through completion-in-region -> minibuffer-complete.

2013-04-15  Alan Mackenzie  <acm@muc.de>

	Correct the placement of c-cpp-delimiters when there're #s not at
	col 0.

	* progmodes/cc-langs.el (c-anchored-cpp-prefix): Reformulate and
	place a submatch around the #.
	* progmodes/cc-mode.el(c-neutralize-syntax-in-and-mark-CPP):
	Start a search at BOL.  Put the c-cpp-delimiter category text propertiy
	on the #, not BOL.

2013-04-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/nadvice.el: Properly test names when adding advice.
	(advice--member-p): New arg `name'.
	(advice--add-function, advice-member-p): Use it (bug#14202).

2013-04-15  Filipp Gunbin  <fgunbin@fastmail.fm>

	Reformulate java imenu-generic-expression.
	The old expression contained ill formed regexps.

	* progmodes/cc-menus.el (cc-imenu-java-ellipsis-regexp)
	(cc-imenu-java-type-spec-regexp, cc-imenu-java-comment-regexp)
	(cc-imenu-java-method-arg-regexp): New defconsts.
	(cc-imenu-java-build-type-args-regex): New defun.
	(cc-imenu-java-generic-expression): Fix, to remove "ambiguous"