@@ -1,5 +1,8 @@
 2013-04-16  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* emacs-lisp/nadvice.el (add-function): Default simple vars to their
+	global bindings.
+
 	* doc-view.el (doc-view-start-process): Handle url-handler directories.
 
 2013-04-15  Dmitry Gutov  <dgutov@yandex.ru>
